21/11/2018
==========
-More work on commonH
-Created common/subArrays class and moved them there
-Shortptr is now in common/ptr class

20/11/2018
==========
Intial work on commonH,common still nothing that major there
Some more work on commonH

19/11/2018
==========
Coleco driver ported to 0.56 