@@ -20,6 +20,7 @@ import static old.mame.driverH.*;
 import static WIP.mame.mame.*;
 import static WIP2.mame.mameH.MAX_MEMORY_REGIONS;
 import static WIP.mame.osdependH.*;
+import static common.libc.cstdlib.*;
 
 public class common {
     
